// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box renders centered component 1`] = `
.c0 {
  margin-left: auto;
  margin-right: auto;
}

<div
  className="c0"
/>
`;

exports[`Box renders color component 1`] = `
.c0 {
  background-color: blue;
}

<div
  className="c0"
/>
`;

exports[`Box renders default component 1`] = `
<div
  className=""
/>
`;

exports[`Box renders inline component 1`] = `
.c0 {
  display: inline-block;
}

<div
  className="c0"
/>
`;
